# Qvora

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  MEMORY.md  README.md  biome.json  docker-compose.yml  lefthook.yml  package-lock.json  package.json
.cache/: wiki-memory-sync.json
.github/: AGENTS.md  CODEOWNERS  CONTEXT.md  MEMORY.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  deploy-api.yml  deploy-postprocess.yml  deploy-web.yml  deploy-worker.yml
docs/01-brand/: Qvora_Brand-Identity.md  Qvora_GitHub-Social-Preview-Spec.md
docs/02-product/: Qvora_Product-Definition.md  Qvora_Product-Overview.md
docs/03-market/: Qvora_Competitive-Analysis.md
docs/04-specs/: Qvora_Feature-Spec.md  Qvora_User-Journey.md  Qvora_User-Stories.md
docs/05-design/: Qvora_Design-System.md  Qvora_UI-Spec.md  Qvora_Wireframes.md
docs/06-technical/: Qvora_API-Design.md  Qvora_Architecture-Stack.md  Qvora_Database-Schema.md  Qvora_Microservice-Architecture.md  Qvora_Repo-Structure.md  Qvora_Sprint-Plan.md  Qvora_System-Architecture.md
docs/07-implementation/: IMPLEMENTATION_CHECKLIST.md  Qvora_Implementation-Phases.md  (+2 more)
scripts/: run-phase3-live-qa.ps1  stage-wiki-memory-sync.ps1  sync-wiki-memory.ps1  validate-commit-msg.js  validate-phase0-3-fixes-one-shot.ps1  validate-phase1-phase2.ps1  validate-phase3-week4.ps1
src/services/postprocess/: Cargo.toml  Dockerfile
src/services/postprocess/src/: error.rs  handler.rs  main.rs  model.rs  mux.rs  processor.rs
wiki/: SCHEMA.md  index.md  log.md
(+155 files in other folders)
